objects/Quote_Request_Comment__c.object
<CustomObject>
    <description>this is Object used to collect the comment that related to the Quote Request</description>
    <fields>
        <fullName>Comment_box__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notify_User1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notify User1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notify_User2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notify User2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Comments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notify_User3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notify User3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Comments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Request__c</fullName>
        <label>Quote Request</label>
        <referenceTo>Quote_Request_Summary__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Comment</label>
    <nameField>
        <displayFormat>Comment-{0}</displayFormat>
        <label>Comment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>